# nand2tetris-projects

./: LICENSE  README.md
.devcontainer/: devcontainer.json
01/: DMux.hdl  DMux8Way.hdl  Mux.hdl  Mux8Way16.hdl  Xor.hdl
02/: ALU.hdl  Inc16.hdl
03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
04/fill/: Fill.asm
04/mult/: Mult.asm  Mult.hack  mult.asm
05/: CPU.hdl  Computer.hdl  Memory.hdl  ToJumpOrNotToJump.hdl
06/hakd/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  hakd.cabal  package.yaml
06/hakd/app/: Main.hs
06/hakd/app/Hack/: AST.hs  Parse.hs  Symbol.hs
06/hakd/app/Text/: Microparsec.hs
06/hakd/src/: main.rs  parser.rs
06/hakd/src/Hack/: AST.hs  Assemble.hs  Parse.hs  Symbol.hs
06/hakd/src/Text/: Microparsec.hs
06/hakd/src/parser/: ast.rs
06/jackal/: Cargo.toml
06/jackal/src/: lib.rs  main.rs  parser.rs
06/jackal/src/parser/: ast.rs
