cabal-version:       2.4
name:                hakd
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Oscar Stevens
maintainer:          Oscar Stevens <oscar_stevens@icloud.com>
copyright:           2021 Oscar Stevens
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , rio
  
  mixins:              base hiding (Prelude)
                     , rio (RIO as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable hakd
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite hakd-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
